# linear-algebra

./: .gitignore  LICENSE  README.md  linear_algebra.code-workspace
Octave/hw01/: hw01_1.m  hw01_2.m  hw01_3.m  hw01_4.m
Octave/hw02/: README.md  hw03_110590003.m  result.txt
matrix/: .gitignore  CMakeLists.txt  Makefile  README.md
matrix/src/: main.cpp  matrix.h  question_one.cpp  question_two.cpp  questions.h
matrix/src/part_one/: question_a.cpp  question_b.cpp  question_c.cpp  question_d.cpp  questions.h
matrix/src/part_two/: question.cpp  questions.h
